--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello
+  name: helloworld
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello
+      app: helloworld
   template:
     metadata:
       labels:
-        app: hello
+        app: helloworld
     spec:
       containers:
       - name: hello
-        image: dockerfabric/hello:latest
+        image: dockerfabric/helloworld:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
