--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -15,8 +15,8 @@ languages:
 
 dast:
 url: http://localhost:5000
-fortipentest_scanner: true #true|false
-full_scan: true #true|false
+fortipentest_scanner: false #true|false
+full_scan: false #true|false
 
 resource:
 serial_scan: false #true|false
